Atualização para implementar um botão voltar ao mini site.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lima Calixto Personalizados - Catálogo</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .back-to-mini-site-button {
+            display: block; /* Faz o link ocupar a largura inteira para centralização */
+            width: 200px; /* Define uma largura para o botão */
+            margin: 20px auto; /* Centraliza o botão na página */
+            padding: 12px 20px;
+            background-color: #4CAF50; /* Uma cor de fundo verde */
+            color: white; /* Cor do texto */
+            text-align: center;
+            text-decoration: none; /* Remove o sublinhado do link */
+            border-radius: 8px; /* Bordas arredondadas */
+            font-weight: bold;
+            transition: background-color 0.3s ease; /* Efeito suave na mudança de cor */
+        }
+
+        .back-to-mini-site-button:hover {
+            background-color: #45a049; /* Cor de fundo mais escura ao passar o mouse */
+        }
+    </style>
 </head>
 <body>
 
@@ -13,6 +32,9 @@
         <img src="imagens/logo/logo.png" alt="Logo Lima Calixto Personalizados" class="logo">
         <h1>Lima Calixto Personalizados</h1>
     </header>
+
+    <!-- Botão Voltar ao Mini-Site -->
+    <a href="https://links-limacalixtopersonalizados.netlify.app/" class="back-to-mini-site-button">Voltar ao Mini-Site</a>
 
     <!-- Seção de busca e ordenação -->
     <div class="filters-container">
