Atualização para subir o novo logo da Lima Calixto Personalizados

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- Cabeçalho com o nome da marca -->
     <header>
-        <img src="imagens/logo/logo.png" alt="Logo Lima Calixto Personalizados" class="logo">
+        <img src="imagens/logo/logo.png" alt="Logo Lima Calixto Personalizados" class="profile-picture">
         <h1>Lima Calixto Personalizados</h1>
     </header>
 
