--- a/index.html
+++ b/index.html
@@ -1,88 +1,90 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!DOCTYPE html> <!-- Define o tipo de documento como HTML5 -->
+<html lang="pt-BR"> <!-- Define o idioma principal do conteúdo da página como Português do Brasil -->
 <head>
+    <!-- Define a codificação de caracteres para o documento -->
     <meta charset="UTF-8">
+    <!-- Configura a viewport para garantir que a página seja renderizada corretamente em dispositivos móveis -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Título da página exibido na aba do navegador -->
     <title>Lima Calixto Personalizados - Catálogo</title>
+    <!-- Link para a folha de estilos CSS externa -->
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        .back-to-mini-site-button {
-            display: block; /* Faz o link ocupar a largura inteira para centralização */
-            width: 200px; /* Define uma largura para o botão */
-            margin: 20px auto; /* Centraliza o botão na página */
-            padding: 12px 20px;
-            background-color: #4CAF50; /* Uma cor de fundo verde */
-            color: white; /* Cor do texto */
-            text-align: center;
-            text-decoration: none; /* Remove o sublinhado do link */
-            border-radius: 8px; /* Bordas arredondadas */
-            font-weight: bold;
-            transition: background-color 0.3s ease; /* Efeito suave na mudança de cor */
-        }
-
-        .back-to-mini-site-button:hover {
-            background-color: #45a049; /* Cor de fundo mais escura ao passar o mouse */
-        }
-    </style>
 </head>
 <body>
 
-    <!-- Cabeçalho com o nome da marca -->
+    <!-- Cabeçalho da página, usando a tag semântica <header> -->
     <header>
+        <!-- Logo da empresa -->
         <img src="imagens/logo/logo.png" alt="Logo Lima Calixto Personalizados" class="profile-picture">
+        <!-- Título principal da página -->
         <h1>Lima Calixto Personalizados</h1>
     </header>
 
-    <!-- Botão Voltar ao Mini-Site -->
-    <a href="https://links-limacalixtopersonalizados.netlify.app/" class="back-to-mini-site-button">Voltar ao Mini-Site</a>
+    <!-- Link formatado como botão para voltar ao site principal -->
+    <a href="https://links-limacalixtopersonalizados.netlify.app/" class="button-style back-to-mini-site-button">Voltar ao Mini-Site</a>
 
-    <!-- Seção de busca e ordenação -->
-    <div class="filters-container">
-        <input type="text" id="searchInput" placeholder="Buscar por nome ou descrição...">
-        <select id="sortOptions">
+    <!-- Seção para os filtros de busca e ordenação, usando a tag semântica <section> -->
+    <section class="filters-container" aria-labelledby="filter-heading">
+        <!-- Campo de texto para o usuário buscar produtos -->
+        <input type="text" id="searchInput" placeholder="Buscar por nome ou descrição..." aria-label="Campo de busca de produtos">
+        <!-- Menu suspenso para selecionar a ordem de exibição dos produtos -->
+        <select id="sortOptions" aria-label="Opções de ordenação de produtos">
             <option value="default">Ordenar por</option>
             <option value="price-asc">Menor Preço</option>
             <option value="price-desc">Maior Preço</option>
             <option value="name-asc">Nome (A-Z)</option>
             <option value="name-desc">Nome (Z-A)</option>
         </select>
-    </div>
+    </section>
 
-    <!-- Container onde os produtos serão exibidos -->
+    <!-- Conteúdo principal da página, onde o catálogo de produtos será inserido dinamicamente -->
     <main id="product-catalog" class="catalog-container"></main>
 
-    <!-- Estrutura do Lightbox (inicialmente oculto) -->
+    <!-- Estrutura do Lightbox para visualização ampliada da imagem do produto (inicialmente oculto) -->
     <div id="lightbox" class="lightbox" style="display:none;">
+        <!-- Botão para fechar o lightbox -->
         <span class="close-lightbox">&times;</span>
-        <img class="lightbox-content" id="lightbox-img">
+        <!-- Imagem que será exibida no lightbox -->
+        <img class="lightbox-content" id="lightbox-img" alt="Imagem do produto em destaque">
+        <!-- Legenda da imagem no lightbox (nome e preço do produto) -->
         <div id="lightbox-caption"></div>
     </div>
 
-    <!-- Rodapé com informações de redes sociais -->
+    <!-- Rodapé da página, usando a tag semântica <footer> -->
     <footer>
         <p>Siga-nos nas redes sociais:</p>
+        <!-- Agrupador para os links de redes sociais -->
         <div class="social-groups">
+            <!-- Grupo de links para "Lima Calixto Personalizados" -->
             <div class="social-group">
                 <p class="social-group-title">Lima Calixto Personalizados</p>
                 <div class="social-links">
+                    <!-- Link para o Facebook com ícone SVG -->
                     <a href="https://www.facebook.com/Limacalixtopersonalizados/" target="_blank" title="Facebook Personalizados" class="social-icon facebook-icon"><svg viewBox="0 0 24 24"><path d="M12 2.04C6.5 2.04 2.04 6.5 2.04 12c0 4.97 3.66 9.1 8.44 9.88v-7H7.88v-2.88h2.6V9.55c0-2.57 1.54-3.99 3.88-3.99 1.1 0 2.24.2 2.24.2v2.46h-1.24c-1.25 0-1.66.78-1.66 1.6v1.9h2.78l-.44 2.88h-2.34V21.88C18.3 21.1 21.96 16.97 21.96 12c0-5.5-4.46-9.96-9.96-9.96z"/></svg></a>
-                    <a href="https://www.instagram.com/limacalixtopersonalizados/" target="_blank" title="Instagram Personalizados" class="social-icon instagram-icon"><svg viewBox="0 0 24 24"><defs><radialGradient id="ig-grad" cx="30%" cy="107%" r="150%"><stop offset="0" stop-color="#fdf497"/><stop offset="0.05" stop-color="#fdf497"/><stop offset="0.45" stop-color="#fd5949"/><stop offset="0.6" stop-color="#d6249f"/><stop offset="0.9" stop-color="#285AEB"/></radialGradient></defs><path d="M12 2c-2.72 0-3.06.01-4.12.06-1.06.05-1.79.22-2.42.47-.65.25-1.17.59-1.69 1.11s-.86 1.04-1.11 1.69c-.25.63-.42 1.36-.47 2.42C2.01 8.94 2 9.28 2 12s.01 3.06.06 4.12c.05 1.06.22 1.79.47 2.42.25.65.59 1.17 1.11 1.69s1.04.86 1.69 1.11c.63.25 1.36.42 2.42.47 1.06.05 1.4.06 4.12.06s3.06-.01 4.12-.06c1.06-.05 1.79-.22 2.42-.47.65-.25 1.17-.59 1.69-1.11s.86-1.04 1.11-1.69c.25-.63.42-1.36.47-2.42.05-1.06.06-1.4.06-4.12s-.01-3.06-.06-4.12c-.05-1.06-.22-1.79-.47-2.42-.25-.65-.59-1.17-1.11-1.69s-1.04-.86-1.69-1.11c-.63-.25-1.36-.42-2.42-.47C15.06 2.01 14.72 2 12 2zm0 1.8c2.67 0 2.98.01 4.04.06 1.02.05 1.58.21 1.96.37.49.2.82.46 1.18.82.36.36.62.69.82 1.18.16.38.32.94.37 1.96.05 1.06.06 1.37.06 4.04s-.01 2.98-.06 4.04c-.05 1.02-.21 1.58-.37 1.96-.2.49-.46.82-.82 1.18-.36.36-.69.62-1.18.82-.38.16-.94.32-1.96.37-1.06.05-1.37.06-4.04.06s-2.98-.01-4.04-.06c-1.02-.05-1.58-.21-1.96-.37-.49-.2-.82-.46-1.18-.82-.36-.36-.62-.69-.82-1.18-.16-.38-.32-.94-.37-1.96-.05-1.06-.06-1.37-.06-4.04s.01-2.98.06-4.04c.05-1.02.21-1.58.37-1.96.2-.49.46-.82.82-1.18.36-.36.69-.62 1.18-.82.38-.16.94-.32 1.96-.37 1.06-.05 1.37-.06 4.04-.06zM12 7.25c-2.62 0-4.75 2.13-4.75 4.75S9.38 16.75 12 16.75s4.75-2.13 4.75-4.75S14.62 7.25 12 7.25zm0 7.7c-1.63 0-2.95-1.32-2.95-2.95s1.32-2.95 2.95-2.95 2.95 1.32 2.95 2.95-1.32 2.95-2.95 2.95zm4.82-8.3c-.58 0-1.05.47-1.05 1.05s.47 1.05 1.05 1.05 1.05-.47 1.05-1.05-.47-1.05-1.05-1.05z"/></svg></a>
+                    <!-- Link para o Instagram com ícone SVG e gradiente -->
+                    <a href="https://www.instagram.com/limacalixtopersonalizados/" target="_blank" title="Instagram Personalizados" class="social-icon instagram-icon"><svg viewBox="0 0 24 24"><defs><radialGradient id="ig-grad" cx="30%" cy="107%" r="150%"><stop offset="0" stop-color="#fdf497"/><stop offset="0.05" stop-color="#fdf497"/><stop offset="0.45" stop-color="#fd5949"/><stop offset="0.6" stop-color="#d6249f"/><stop offset="0.9" stop-color="#285AEB"/></radialGradient></defs><path d="M12 2c-2.72 0-3.06.01-4.12.06-1.06.05-1.79.22-2.42.47-.65.25-1.17.59-1.69 1.11s-.86 1.04-1.11 1.69c-.25.63-.42 1.36-.47 2.42C2.01 8.94 2 9.28 2 12s.01 3.06.06 4.12c.05 1.06.22 1.79.47 2.42.25.65.59 1.17 1.11 1.69s1.04.86 1.69 1.11c.63.25 1.36.42 2.42.47 1.06.05 1.4.06 4.12.06s3.06-.01 4.12-.06c1.06-.05 1.79-.22 2.42-.47.65-.25 1.17-.59 1.69-1.11s.86-1.04 1.11-1.69c.25-.63.42-1.36.47-2.42.05-1.06.06-1.4.06-4.12s-.01-3.06-.06-4.12c-.05-1.06-.22-1.79-.47-2.42-.25-.65-.59-1.17-1.11-1.69s-1.04-.86-1.69-1.11c-.63-.25-1.36-.42-2.42-.47C15.06 2.01 14.72 2 12 2zm0 1.8c2.67 0 2.98.01 4.04.06 1.02.05 1.58.21 1.96.37.49.2.82.46 1.18.82.36.36.62.69.82 1.18.16.38.32.94.37 1.96.05 1.06.06 1.37.06 4.04s-.01 2.98-.06 4.04c-.05 1.02-.21 1.58-.37 1.96-.2.49-.46.82-.82 1.18-.36.36-.69.62-1.18.82-.38.16-.94.32-1.96.37-1.06.05-1.37.06-4.04.06s-2.98-.01-4.04-.06c-1.02-.05-1.58-.21-1.96-.37-.49-.2-.82-.46-1.18-.82-.36-.36-.62-.69-.82-1.18-.16-.38-.32-.94-.37-1.96-.05-1.06-.06-1.37-.06-4.04s.01-2.98.06-4.04c.05-1.02.21-1.58.37-1.96.2-.49.46.82.82-1.18.36-.36.69.62 1.18.82.38-.16.94-.32 1.96-.37 1.06-.05 1.37-.06 4.04-.06zM12 7.25c-2.62 0-4.75 2.13-4.75 4.75S9.38 16.75 12 16.75s4.75-2.13 4.75-4.75S14.62 7.25 12 7.25zm0 7.7c-1.63 0-2.95-1.32-2.95-2.95s1.32-2.95 2.95-2.95 2.95 1.32 2.95 2.95-1.32 2.95-2.95 2.95zm4.82-8.3c-.58 0-1.05.47-1.05 1.05s.47 1.05 1.05 1.05 1.05-.47 1.05-1.05-.47-1.05-1.05-1.05z"/></svg></a>
+                    <!-- Link para o WhatsApp com ícone SVG -->
                     <a href="https://wa.me/5532991657472?text=Ol%C3%A1%2C%20Marli!%20Vim%20do%20site%20e%20gostaria%20de%20conversar%20sobre%20um%20or%C3%A7amento.%20Tirar%20d%C3%BAvida." target="_blank" class="social-icon whatsapp-icon" title="Contato via WhatsApp"><svg viewBox="0 0 24 24"><path d="M12.04 2.01C6.53 2.01 2.08 6.46 2.08 11.97c0 1.79.47 3.5 1.34 5.01L2 22l5.3-1.38c1.44.82 3.08 1.26 4.74 1.26h.01c5.51 0 9.96-4.45 9.96-9.96C22 6.46 17.55 2.01 12.04 2.01zM12.04 20.1c-1.4 0-2.76-.36-3.96-1.02l-.28-.17-2.95.77.79-2.88-.19-.3a8.1 8.1 0 0 1-1.24-4.24c0-4.46 3.63-8.09 8.1-8.09 2.2 0 4.23.86 5.72 2.35s2.35 3.52 2.35 5.73c-.01 4.46-3.64 8.09-8.1 8.09zm4.27-5.8c-.23-.12-1.38-.68-1.6-0.76-.21-.08-.37-.12-.52.12-.15.23-.6.76-.74.91-.14.15-.28.17-.52.05-.24-.12-1-.36-1.89-1.16-.7-.62-1.15-1.38-1.3-1.62-.14-.24-.02-.37.1-.48.11-.1.24-.27.36-.4.12-.14.16-.23.23-.39.08-.15.04-.28-.02-.4-.06-.12-.52-1.25-.72-1.71-.19-.46-.39-.39-.52-.4-.13-.01-.28-.01-.42-.01-.15 0-.38.05-.58.23-.2.18-.77.75-.77 1.82s.79 2.11.9 2.26c.11.15 1.55 2.35 3.76 3.3 1.88.81 2.22.65 2.62.61.4-.04 1.38-.56 1.57-1.1.2-.54.2-1 .14-1.1-.06-.1-.22-.16-.45-.28z"/></svg></a>
                 </div>
             </div>
+            <!-- Grupo de links para "Manutenção de PC" -->
             <div class="social-group">
                 <p class="social-group-title">Manutenção de PC</p>
                 <div class="social-links">
+                    <!-- Link para o Facebook com ícone SVG -->
                     <a href="https://www.facebook.com/Limalimamanutencaopc" target="_blank" title="Facebook Manutenção" class="social-icon facebook-icon"><svg viewBox="0 0 24 24"><path d="M12 2.04C6.5 2.04 2.04 6.5 2.04 12c0 4.97 3.66 9.1 8.44 9.88v-7H7.88v-2.88h2.6V9.55c0-2.57 1.54-3.99 3.88-3.99 1.1 0 2.24.2 2.24.2v2.46h-1.24c-1.25 0-1.66.78-1.66 1.6v1.9h2.78l-.44 2.88h-2.34V21.88C18.3 21.1 21.96 16.97 21.96 12c0-5.5-4.46-9.96-9.96-9.96z"/></svg></a>
-                    <a href="https://www.instagram.com/limalimamanutencaopc/" target="_blank" title="Instagram Manutenção" class="social-icon instagram-icon"><svg viewBox="0 0 24 24"><defs><radialGradient id="ig-grad" cx="30%" cy="107%" r="150%"><stop offset="0" stop-color="#fdf497"/><stop offset="0.05" stop-color="#fdf497"/><stop offset="0.45" stop-color="#fd5949"/><stop offset="0.6" stop-color="#d6249f"/><stop offset="0.9" stop-color="#285AEB"/></radialGradient></defs><path d="M12 2c-2.72 0-3.06.01-4.12.06-1.06.05-1.79.22-2.42.47-.65.25-1.17.59-1.69 1.11s-.86 1.04-1.11 1.69c-.25.63-.42 1.36-.47 2.42C2.01 8.94 2 9.28 2 12s.01 3.06.06 4.12c.05 1.06.22 1.79.47 2.42.25.65.59 1.17 1.11 1.69s1.04.86 1.69 1.11c.63.25 1.36.42 2.42.47 1.06.05 1.4.06 4.12.06s3.06-.01 4.12-.06c1.06-.05 1.79-.22 2.42-.47.65-.25 1.17-.59 1.69-1.11s.86-1.04 1.11-1.69c.25-.63.42-1.36.47-2.42.05-1.06.06-1.4.06-4.12s-.01-3.06-.06-4.12c-.05-1.06-.22-1.79-.47-2.42-.25-.65-.59-1.17-1.11-1.69s-1.04-.86-1.69-1.11c-.63-.25-1.36-.42-2.42-.47C15.06 2.01 14.72 2 12 2zm0 1.8c2.67 0 2.98.01 4.04.06 1.02.05 1.58.21 1.96.37.49.2.82.46 1.18.82.36.36.62.69.82 1.18.16.38.32.94.37 1.96.05 1.06.06 1.37.06 4.04s-.01 2.98-.06 4.04c-.05 1.02-.21 1.58-.37 1.96-.2.49-.46.82-.82 1.18-.36.36-.69.62-1.18.82-.38.16-.94.32-1.96.37-1.06.05-1.37.06-4.04.06s-2.98-.01-4.04-.06c-1.02-.05-1.58-.21-1.96-.37-.49-.2-.82-.46-1.18-.82-.36-.36-.62-.69-.82-1.18-.16-.38-.32-.94-.37-1.96-.05-1.06-.06-1.37-.06-4.04s.01-2.98.06-4.04c.05-1.02.21-1.58.37-1.96.2-.49.46.82.82-1.18.36-.36.69-.62 1.18-.82.38-.16.94-.32 1.96-.37 1.06-.05 1.37-.06 4.04-.06zM12 7.25c-2.62 0-4.75 2.13-4.75 4.75S9.38 16.75 12 16.75s4.75-2.13 4.75-4.75S14.62 7.25 12 7.25zm0 7.7c-1.63 0-2.95-1.32-2.95-2.95s1.32-2.95 2.95-2.95 2.95 1.32 2.95 2.95-1.32 2.95-2.95 2.95zm4.82-8.3c-.58 0-1.05.47-1.05 1.05s.47 1.05 1.05 1.05 1.05-.47 1.05-1.05-.47-1.05-1.05-1.05z"/></svg></a>
+                    <!-- Link para o Instagram com ícone SVG e gradiente -->
+                    <a href="https://www.instagram.com/limalimamanutencaopc/" target="_blank" title="Instagram Manutenção" class="social-icon instagram-icon"><svg viewBox="0 0 24 24"><defs><radialGradient id="ig-grad" cx="30%" cy="107%" r="150%"><stop offset="0" stop-color="#fdf497"/><stop offset="0.05" stop-color="#fdf497"/><stop offset="0.45" stop-color="#fd5949"/><stop offset="0.6" stop-color="#d6249f"/><stop offset="0.9" stop-color="#285AEB"/></radialGradient></defs><path d="M12 2c-2.72 0-3.06.01-4.12.06-1.06.05-1.79.22-2.42.47-.65.25-1.17.59-1.69 1.11s-.86 1.04-1.11 1.69c-.25.63-.42 1.36-.47 2.42C2.01 8.94 2 9.28 2 12s.01 3.06.06 4.12c.05 1.06.22 1.79.47 2.42.25.65.59 1.17 1.11 1.69s1.04.86 1.69 1.11c.63.25 1.36.42 2.42.47 1.06.05 1.4.06 4.12.06s3.06-.01 4.12-.06c1.06-.05 1.79-.22 2.42-.47.65-.25 1.17-.59 1.69-1.11s.86-1.04 1.11-1.69c.25-.63.42-1.36.47-2.42.05-1.06.06-1.4.06-4.12s-.01-3.06-.06-4.12c-.05-1.06-.22-1.79-.47-2.42-.25-.65-.59-1.17-1.11-1.69s-1.04-.86-1.69-1.11c-.63-.25-1.36-.42-2.42-.47C15.06 2.01 14.72 2 12 2zm0 1.8c2.67 0 2.98.01 4.04.06 1.02.05 1.58.21 1.96.37.49.2.82.46 1.18.82.36.36.62.69.82 1.18.16.38.32.94.37 1.96.05 1.06.06 1.37.06 4.04s-.01 2.98-.06 4.04c-.05 1.02-.21 1.58-.37 1.96-.2.49-.46.82-.82 1.18-.36.36-.69.62-1.18.82-.38.16-.94.32-1.96.37-1.06.05-1.37.06-4.04.06s-2.98-.01-4.04-.06c-1.02-.05-1.58-.21-1.96-.37-.49-.2-.82-.46-1.18-.82-.36-.36-.62-.69-.82-1.18-.16-.38-.32-.94-.37-1.96-.05-1.06-.06-1.37-.06-4.04s.01-2.98.06-4.04c.05-1.02.21-1.58.37-1.96.2-.49.46.82.82-1.18.36-.36.69.62 1.18.82.38-.16.94-.32 1.96-.37 1.06-.05 1.37-.06 4.04-.06zM12 7.25c-2.62 0-4.75 2.13-4.75 4.75S9.38 16.75 12 16.75s4.75-2.13 4.75-4.75S14.62 7.25 12 7.25zm0 7.7c-1.63 0-2.95-1.32-2.95-2.95s1.32-2.95 2.95-2.95 2.95 1.32 2.95 2.95-1.32 2.95-2.95 2.95zm4.82-8.3c-.58 0-1.05.47-1.05 1.05s.47 1.05 1.05 1.05 1.05-.47 1.05-1.05-.47-1.05-1.05-1.05z"/></svg></a>
+                    <!-- Link para o WhatsApp com ícone SVG -->
                     <a href="https://wa.me/5532991992905?text=Ol%C3%A1!%20%20Vim%20pelo%20site%20e%20gostaria%20de%20or%C3%A7amento%20para%20manuten%C3%A7%C3%A3o%20de%20computadores%20e%2Fou%20notebooks." target="_blank" class="social-icon whatsapp-icon" title="Contato via WhatsApp"><svg viewBox="0 0 24 24"><path d="M12.04 2.01C6.53 2.01 2.08 6.46 2.08 11.97c0 1.79.47 3.5 1.34 5.01L2 22l5.3-1.38c1.44.82 3.08 1.26 4.74 1.26h.01c5.51 0 9.96-4.45 9.96-9.96C22 6.46 17.55 2.01 12.04 2.01zM12.04 20.1c-1.4 0-2.76-.36-3.96-1.02l-.28-.17-2.95.77.79-2.88-.19-.3a8.1 8.1 0 0 1-1.24-4.24c0-4.46 3.63-8.09 8.1-8.09 2.2 0 4.23.86 5.72 2.35s2.35 3.52 2.35 5.73c-.01 4.46-3.64 8.09-8.1 8.09zm4.27-5.8c-.23-.12-1.38-.68-1.6-0.76-.21-.08-.37-.12-.52.12-.15.23-.6.76-.74.91-.14.15-.28.17-.52.05-.24-.12-1-.36-1.89-1.16-.7-.62-1.15-1.38-1.3-1.62-.14-.24-.02-.37.1-.48.11-.1.24-.27.36-.4.12-.14.16-.23.23-.39.08-.15.04-.28-.02-.4-.06-.12-.52-1.25-.72-1.71-.19-.46-.39-.39-.52-.4-.13-.01-.28-.01-.42-.01-.15 0-.38.05-.58.23-.2.18-.77.75-.77 1.82s.79 2.11.9 2.26c.11.15 1.55 2.35 3.76 3.3 1.88.81 2.22.65 2.62.61.4-.04 1.38-.56 1.57-1.1.2-.54.2-1 .14-1.1-.06-.1-.22-.16-.45-.28z"/></svg></a>
                 </div>
             </div>
         </div>
-        <!-- <img src="imagens/logo/logo.png" alt="Logo Lima Calixto Personalizados" class="logo-footer"> -->
+        <!-- Informações de direitos autorais -->
         <p>&copy; 2025 Lima Calixto Personalizados</p>
     </footer>
 
+    <!-- Link para o arquivo JavaScript externo -->
     <script src="js/script.js"></script>
 </body>
 </html>
